--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ ext {
 repositories {
     mavenLocal()
     mavenCentral()
-//    maven { url "http://repo1.maven.org/maven2" }
+//    maven { url "http://gradle.artifactoryonline.com/gradle/libs/" }
 }
 configurations.all {
     resolutionStrategy.force(
@@ -25,7 +25,7 @@ configurations.all {
 dependencies {
     dependencies {
         compile(
-                fileTree(dir: 'src/main/webapp/libs' , include: '*.jar' )
+                fileTree(dir: 'libs' , include: '*.jar' )
         )
         compile(
                 "org.springframework:spring-core:${springVersion}",
