--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,46 @@
 #\u6570\u636E\u5E93\u8FDE\u63A5
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.10.2:3306/his_chat?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#jdbc.url=jdbc:mysql://localhost:3306/his_chat?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#jdbc.user=root
-#jdbc.password=12345678
+jdbc.url=jdbc:mysql://localhost:3306/mo_user?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.user=root
+jdbc.password=12345678
+#\u521D\u59CB\u5316\u8FDE\u63A5\u6C60\u65F6\u8FDE\u63A5\u6570\u91CF
+jdbc.initialPoolSize=5
+#\u5141\u8BB8\u6700\u5C0F\u8FDE\u63A5\u6570\u91CF\u4E3A5\u4E2A
+jdbc.minPoolSize=5
+#\u5141\u8BB8\u6700\u5927\u8FDE\u63A5\u6570\u91CF
+jdbc.maxPoolSize=30
+#\u5141\u8BB8\u6700\u5927\u8FDE\u63A5\u6570\u91CF
+jdbc.numHelperThreads=100
+#\u5141\u8BB8\u8FDE\u63A5\u6C60\u6700\u5927\u751F\u6210100\u4E2APreparedStatement\u5BF9\u8C61
+jdbc.maxStatements=200
+#\u8FDE\u63A5\u6709\u6548\u65F6\u95F4\uFF0C\u8FDE\u63A5\u8D85\u8FC73600\u79D2\u672A\u4F7F\u7528\uFF0C\u5219\u8BE5\u8FDE\u63A5\u4E22\u5F03
+jdbc.maxIdleTime=3600
+#\u8FDE\u63A5\u7528\u5B8C\u65F6\uFF0C\u4E00\u6B21\u4EA7\u751F\u7684\u65B0\u8FDE\u63A5\u6B65\u8FDB\u503C\u4E3A2
+jdbc.acquireIncrement=2
+#\u83B7\u53D6\u8FDE\u63A5\u5931\u8D25\u540E\u518D\u5C1D\u8BD510\u6B21\uFF0C\u518D\u5931\u8D25\u5219\u8FD4\u56DEDAOException\u5F02\u5E38
+jdbc.acquireRetryAttempts=5
+#\u83B7\u53D6\u4E0B\u4E00\u6B21\u8FDE\u63A5\u65F6\u6700\u77ED\u95F4\u9694600\u6BEB\u79D2\uFF0C\u6709\u52A9\u4E8E\u63D0\u9AD8\u6027\u80FD
+jdbc.acquireRetryDelay=600
+#\u68C0\u67E5\u8FDE\u63A5\u7684\u6709\u6548\u6027\uFF0C\u6B64\u5904\u5C0F\u5F1F\u4E0D\u662F\u5F88\u61C2\u4EC0\u4E48\u610F\u601D
+jdbc.testConnectionOnCheckin=true
+#\u6BCF\u4E2A1200\u79D2\u68C0\u67E5\u8FDE\u63A5\u5BF9\u8C61\u72B6\u6001
+jdbc.idleConnectionTestPeriod=1200
+#\u83B7\u53D6\u65B0\u8FDE\u63A5\u7684\u8D85\u65F6\u65F6\u95F4\u4E3A10000\u6BEB\u79D2
+jdbc.checkoutTimeout=30000
+
+jdbc2.driverClass=com.mysql.jdbc.Driver
+jdbc2.url=jdbc:mysql://localhost:3306/mo_business?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc2.user=root
+jdbc2.password=12345678
+jdbc2.initialPoolSize=5
+jdbc2.minPoolSize=5
+jdbc2.maxPoolSize=30
+jdbc2.numHelperThreads=100
+jdbc2.maxStatements=200
+jdbc2.maxIdleTime=3600
+jdbc2.acquireIncrement=2
+jdbc2.acquireRetryAttempts=5
+jdbc2.acquireRetryDelay=600
+jdbc2.testConnectionOnCheckin=true
+jdbc2.idleConnectionTestPeriod=1200
+jdbc2.checkoutTimeout=30000
