--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,19 +1,45 @@
-#Log4j
-log4j.rootLogger=INFO,console,file
-log4j.appender.A3.BufferedIO=true
-#Buffer\u5355\u4F4D\u4E3A\u5B57\u8282\uFF0C\u9ED8\u8BA4\u662F8K\uFF0CIO BLOCK\u5927\u5C0F\u9ED8\u8BA4\u4E5F\u662F8K
-log4j.appender.A3.BufferSize=8192
+##Log4j
+#log4j.rootLogger=INFO,console,file
+#log4j.appender.A3.BufferedIO=true
+##Buffer\u5355\u4F4D\u4E3A\u5B57\u8282\uFF0C\u9ED8\u8BA4\u662F8K\uFF0CIO BLOCK\u5927\u5C0F\u9ED8\u8BA4\u4E5F\u662F8K
+#log4j.appender.A3.BufferSize=8192
+#
+## \u63A7\u5236\u53F0\u65E5\u5FD7\u8BBE\u7F6E
+#log4j.appender.console=org.apache.log4j.ConsoleAppender
+#log4j.appender.console.layout=org.apache.log4j.SimpleLayout
+#log4j.appender.console.layout.ConversionPattern=%p %d{HH:mm:ss.SSS} [%X{ip}] - %l %m%n
+#
+## \u6587\u4EF6\u65E5\u5FD7\u8BBE\u7F6E
+#log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.file.file=/logs/mo_test.log
+#log4j.appender.file.DatePattern='.'yyyy-MM-dd
+#log4j.appender.file.layout=org.apache.log4j.SimpleLayout
+#log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %X{ip} [%t] %5p %c{1} %m%n
+#RestfulController
+#log4j.logger.com.ihefe=DEBUG
 
-# \u63A7\u5236\u53F0\u65E5\u5FD7\u8BBE\u7F6E
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.SimpleLayout
-log4j.appender.console.layout.ConversionPattern=%p %d{HH:mm:ss.SSS} [%X{ip}] - %l %m%n
 
-# \u6587\u4EF6\u65E5\u5FD7\u8BBE\u7F6E
-log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.file=/logs/nurses/ihefe_nurses.log
-log4j.appender.file.DatePattern='.'yyyy-MM-dd
-log4j.appender.file.layout=org.apache.log4j.SimpleLayout
-log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %X{ip} [%t] %5p %c{1} %m%n
+### \u8BBE\u7F6E###
+log4j.rootLogger = debug,stdout,D,E
 
-log4j.logger.com.ihefe=DEBUG
+### \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u62AC ###
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target = System.out
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+
+### \u8F93\u51FADEBUG \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
+log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.D.File = /logs/log.log
+log4j.appender.D.Append = true
+log4j.appender.D.Threshold = DEBUG
+log4j.appender.D.layout = org.apache.log4j.PatternLayout
+log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+
+### \u8F93\u51FAERROR \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
+log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.E.File =/logs/error.log
+log4j.appender.E.Append = true
+log4j.appender.E.Threshold = ERROR
+log4j.appender.E.layout = org.apache.log4j.PatternLayout
+log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
